<resources>
    <string name="app_name">PayToAnyOne</string>
    <string name="accounts">Accounts</string>
    <string name="payment">Payment</string>
    <string name="favourites">Favourites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bank">Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="pay_now">Pay Now</string>
    <string name="tap_amp_pay"><![CDATA[Tap & Pay]]></string>
    <string name="continueuser">Continue</string>
    <string name="account">Account</string>
    <string name="pay_from">Pay from</string>
    <string name="pat_to">Pay to</string>
    <string name="select_purpose">Select Purpose</string>
    <string name="pkr">PKR</string>
    <string name="select_account">Select Account</string>
    <string name="proceed_to_pay">Proceed To Pay</string>
    <string name="rs">Rs</string>
    <string name="add_comment">Add Comment</string>
    <string name="date">Date</string>
    <string name="name_of_payee">Name of Payee</string>
    <string name="share">Share</string>
    <string name="amount_sent">Amount Sent</string>
    <string name="edit">Edit</string>
    <string name="_0">0</string>
    <string name="empty_fragment">Empty Fragment</string>
    <string name="your_payment_has_been_processed">Your payment has been processed</string>
    <string name="this_message_can_be_described_in_detail">This message can be described in detail.</string>
    <string name="_12_november_2020">12 November, 2020</string>
    <string name="paid_to">Paid to</string>
    <string name="enter_amount">Enter Amount</string>
</resources>