<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.example.templatesampleapp.ui.paynow.PayNowViewModel" />

        <variable
            name="model"
            type="com.example.templatesampleapp.model.Payees" />

        <variable
            name="isAccViewExpanded"
            type="Boolean" />

        <variable
            name="isPurposeViewExpanded"
            type="Boolean" />

        <variable
            name="datamodel"
            type="com.example.templatesampleapp.model.uimodel.CardViewRef" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:fillViewport="true"
        tools:context=".ui.paynow.PayNowFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:background="@color/concrete"
            android:paddingStart="@dimen/toolbar_margin_start_inside"
            android:paddingEnd="@dimen/toolbar_margin_end_inside">

            <TextView
                android:id="@+id/payfrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aspira_medium"
                android:text="@string/pay_from"
                android:textColor="@color/santas_grey"
                android:textSize="@dimen/_14ssp"
                android:textStyle="normal"
                app:layout_constraintBottom_toTopOf="@id/expand_acc_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                android:id="@+id/expand_acc_view"
                layout="@layout/expandable_acc_view"
                app:isViewExpanded="@{isAccViewExpanded}"
                app:layout_constraintBottom_toTopOf="@id/payto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/payfrom" />


            <TextView
                android:id="@+id/payto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:fontFamily="@font/aspira_medium"
                android:text="@string/pat_to"
                android:textColor="@color/santas_grey"
                android:textSize="@dimen/_14ssp"
                android:textStyle="normal"
                app:layout_constraintBottom_toTopOf="@id/card_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/expand_acc_view" />

            <include
                android:id="@+id/card_view"
                layout="@layout/cradit_card_view"
                android:layout_width="0dp"
                android:layout_height="@dimen/_176sdp"
                android:layout_marginTop="@dimen/_8sdp"
                app:datamodel="@{datamodel}"
                app:layout_constraintBottom_toTopOf="@id/expand_purpose_view"

                app:layout_constraintEnd_toEndOf="@id/end_guide"
                app:layout_constraintStart_toStartOf="@id/start_guide"
                app:layout_constraintTop_toBottomOf="@id/payto" />

            <include
                android:id="@+id/expand_purpose_view"
                layout="@layout/expandable_purpose_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
android:layout_marginBottom="@dimen/_15sdp"
                app:hintvisble="@{viewmodel.purposeSelected}"
                app:isViewExpanded="@{isPurposeViewExpanded}"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_view" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_continue"
                android:layout_width="0dp"
                android:enabled="false"
                android:layout_height="@dimen/_44sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_17sdp"
                android:fontFamily="@font/aspira_demi"
                android:text="@string/continueuser"
                android:textAllCaps="false"
                android:theme="@style/button_overlay"
                app:cornerRadius="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/end_guide"
                app:layout_constraintStart_toStartOf="@id/start_guide"
                app:layout_constraintTop_toBottomOf="@id/barrier_expand_view"
                app:layout_constraintVertical_bias="1.0" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier_expand_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="expand_purpose_view,expand_acc_view" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="0dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/start_guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="0dp" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/account_expansion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:visibility="@{isAccViewExpanded ? View.GONE : View.VISIBLE}"
                app:constraint_referenced_ids="payto,card_view,expand_purpose_view" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/purpose_expansion"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:visibility="@{isPurposeViewExpanded ? View.GONE : View.VISIBLE}"
                app:constraint_referenced_ids="payto,card_view,payfrom,expand_acc_view" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>